--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "bulma": "^0.2.3",
+    "google-maps": "^3.2.1",
     "moment": "^2.17.1",
     "vue": "^2.0.1",
     "vue-router": "^2.0.1"
