--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "bulma": "^0.2.3",
-    "google-maps": "^3.2.1",
     "font-awesome": "^4.7.0",
+    "google-maps": "^3.2.1",
+    "hamburgers": "^0.7.0",
     "moment": "^2.17.1",
+    "moon": "^0.1.1",
+    "ng2-toastr": "^1.3.2",
     "vue": "^2.0.1",
     "vue-resource": "^1.0.3",
-    "vue-router": "^2.0.1"
+    "vue-router": "^2.0.1",
+    "vue-toastr": "^1.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
